[package]
name = "my-own-redis"
version = "0.1.0"
edition = "2021"

[lib]
name = "shared"
path = "src/shared/lib.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
anyhow = "1.0.75"
error-iter = "0.4.1"
libc = "0.2.150"
onlyerror = "0.1.3"
